Update email address

--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=AT42QT
 version=0.2.0
-author=Peter Polidoro <peterpolidoro@gmail.com>
-maintainer=Peter Polidoro <peterpolidoro@gmail.com>
+author=Peter Polidoro <peter@polidoro.io>
+maintainer=Peter Polidoro <peter@polidoro.io>
 sentence=Arduino library for the Microchip AT42QT series capacitive touch sensors.
 paragraph=Like this project? Please star it on GitHub!
 category=Device Control
